--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,6 @@ name    = "ieee802154"
 version = "0.1.0"
 authors = ["Hanno Braun <hanno@braun-robotics.com>"]
 edition = "2018"
+
+[dependencies]
+byteorder = { version = "1", default-features = false }
