Update to Rust 2018
No fixes were necessary.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name    = "ieee802154"
 version = "0.1.0"
 authors = ["Hanno Braun <hanno@braun-robotics.com>"]
+edition = "2018"
 
 [dependencies]
 byteorder     = { version = "1", default-features = false }
