--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name    = "ieee802154"
-version = "0.1.0"
+version = "0.1.1-dev"
 authors = ["Hanno Braun <hanno@braun-robotics.com>"]
 edition = "2018"
 
