document how to use SafeBytesSlice wraper around '&mut [u8]'

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,6 @@ travis-ci   = { repository = "braun-robotics/ieee802154" }
 hash32        = "0.1"
 hash32-derive = "0.1"
 bytes = { version = "0.5", default-features=false }
+
+[dev-dependencies]
+static-bytes = "0.1"
