--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ travis-ci   = { repository = "braun-robotics/ieee802154" }
 hash32        = "0.1"
 hash32-derive = "0.1"
 byte = "0.2.4"
+aead = "0.4.0"
