--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ travis-ci   = { repository = "braun-robotics/ieee802154" }
 hash32        = "0.1"
 hash32-derive = "0.1"
 byte = "0.2.4"
-aead = "0.4.0"
+aead = {version = "0.3", default-features = false}
 
 [dev-dependencies]
-chacha20poly1305 = "0.7.1"
+chacha20poly1305 = {version = "0.7.1", features = ["reduced-round"], default-features = false}
