--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ hash32-derive = "0.1"
 byte = "0.2.4"
 cipher = { version = "0.2", default-features = false }
 ccm = {version = "0.3.0", default-features = false}
-defmt = { version = "0.2.1", optional = true }
+defmt = { version = ">=0.2.0,<0.4", optional = true }
 
 [dev-dependencies]
 aes-soft = {version = "0.6.4", default-features = false}
