--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ readme        = "README.md"
 categories    = ["embedded", "network-programming", "no-std"]
 keywords      = ["WPAN"]
 
+[features]
+
 
 [badges]
 travis-ci   = { repository = "braun-robotics/ieee802154" }
@@ -21,6 +23,7 @@ travis-ci   = { repository = "braun-robotics/ieee802154" }
 hash32        = "0.2.1"
 hash32-derive = "0.1"
 byte = "0.2.4"
+defmt = { version = ">=0.2.0,<0.4", optional = true }
 
 [dependencies.ccm]
 version          = "0.4.0"
@@ -29,7 +32,6 @@ default-features = false
 [dependencies.cipher]
 version          = "0.3.0"
 default-features = false
-
 
 [dev-dependencies]
 rand = "0.8.3"
